--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-image-crop": "^11.0.10",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
@@ -23,4 +24,3 @@
     "vite": "^5.4.8"
   }
 }
-
